@@ -34,6 +34,9 @@
 #define	NOTIFYAREA_WIDTH_DEF	100
 #define	NOTIFYICON_DIST			20
 #define	NOTIFYAREA_SPACE		10
+#define	NOTIFYICON_SIZE			16
+#define	NOTIFYICON_X			2
+#define	NOTIFYICON_Y			3
 
 #define	ICON_AUTOHIDE_SECONDS	300
 
